--- a/interview-q1/package.json
+++ b/interview-q1/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "sass": "^1.62.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.2.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
